full_test/testcases/step11/arr_2lv.c
int main()
{
    int a[2][2];
    int k = 0;
    // for (int i = 0; i < 2; i = i + 1)
    //     for (int j = 0; j < 2; j = j + 1)
    //         a[i][j] = k=k+1; 我们不支持这种写法，因为我们不支持for循环
    // 但是我们支持这种写法：
    int i = 0; // 外层循环的初始化
    while (i < 2)
    {              // 外层循环的条件
        int j = 0; // 内层循环的初始化
        while (j < 2)
        {                        // 内层循环的条件
            a[i][j] = k = k + 1; // 循环体
            j = j + 1;           // 内层循环的迭代
        }
        i = i + 1; // 外层循环的迭代
    }
    return a[0][0] * 40 + a[0][1] * 20 + a[1][0] * 10 + a[1][1];
}
